# SdlEngine

./: 2DGameEngine.vcxproj  2DGameEngine.vcxproj.filters  CMakeLists.txt  MainEntry.cpp
Entities/: BaseEntity.h  EntityManager.h
Entities/Characteristics/: Collider.cpp  Collider.h  Physiks.h  Player.h  Trigger.h
GameLogics/: CollisionManager.h  GravityManager.h
GameLogics/InputManager/: InputManager.cpp  InputManager.h  Key.h
General/: Engine.cpp  Engine.h  Logger.cpp  Logger.h  OptionManager.cpp  OptionManager.h
Helpers/: LoaderHelper.h
Map/: MapManager.cpp  MapManager.h
